final-namp tool with backend

--- a/nmap/frontend/index.html
+++ b/nmap/frontend/index.html
@@ -3,57 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nmap Web UI</title>
+    <title>Network Scanner</title>
+    <!-- Link to Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
-        body { 
-            font-family: 'Inter', sans-serif; 
-            background-color: #111827; /* Darker background */
-        }
-        .loader { 
-            border-top-color: #10B981; /* Emerald green */
-            animation: spin 1s linear infinite; 
-        }
-        @keyframes spin { 
-            to { transform: rotate(360deg); } 
-        }
-        .nav-active { 
-            color: #10B981; 
-            border-bottom-color: #10B981; 
-        }
-        .page { 
-            display: none; 
-        }
-        .page-active { 
-            display: block; 
-        }
-        /* Custom button style */
-        .scan-btn {
-            background: linear-gradient(90deg, #10B981, #34D399);
-            box-shadow: 0 4px 15px 0 rgba(16, 185, 129, 0.75);
-        }
-        .scan-btn:hover {
-            box-shadow: 0 6px 20px 0 rgba(16, 185, 129, 0.85);
-        }
-    </style>
+    <!-- Link to your custom stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="text-gray-200">
 
-    <div class="container mx-auto p-4 md:p-8">
+    <div class="container mx-auto p-4 md:p-8 min-h-screen flex flex-col justify-center">
         <header class="text-center mb-10">
-            <h1 class="text-4xl md:text-5xl font-bold text-white">Nmap <span class="text-emerald-400">Web UI</span></h1>
-            <p class="text-gray-400 mt-2">A modern interface for the Nmap network scanner.</p>
+            <h1 class="text-5xl md:text-6xl font-bold text-white uppercase tracking-widest">Network <span class="text-cyan-400">Scanner</span></h1>
+            <p class="text-cyan-300/70 mt-2 text-lg">Network Reconnaissance Interface</p>
         </header>
 
         <!-- Navigation -->
-        <nav class="flex justify-center border-b border-gray-700 mb-8">
-            <button id="nav-scanner" class="flex items-center gap-2 py-4 px-6 text-lg font-medium border-b-2 border-transparent nav-active">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M2.166 4.999A11.954 11.954 0 0010 18.5a11.954 11.954 0 007.834-13.501l-4.95 4.95a7.454 7.454 0 01-1.088 1.088l-4.95-4.95z" clip-rule="evenodd" /><path d="M10 3.5a6.5 6.5 0 100 13a6.5 6.5 0 000-13zM10 15a5 5 0 100-10 5 5 0 000 10z" /></svg>
+        <nav class="flex justify-center border-b border-cyan-500/20 mb-8">
+            <button id="nav-scanner" class="flex items-center gap-2 py-4 px-6 text-lg font-medium border-b-2 border-transparent nav-active uppercase tracking-wider">
                 Scanner
             </button>
-            <button id="nav-history" class="flex items-center gap-2 py-4 px-6 text-lg font-medium border-b-2 border-transparent text-gray-400 hover:text-emerald-400 transition-colors">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" /></svg>
+            <button id="nav-history" class="flex items-center gap-2 py-4 px-6 text-lg font-medium border-b-2 border-transparent text-gray-400 hover:text-cyan-400 transition-colors uppercase tracking-wider">
                 History
             </button>
         </nav>
@@ -61,25 +30,30 @@
         <main>
             <!-- Scanner Page -->
             <div id="page-scanner" class="page page-active">
-                <div class="bg-gray-800 p-8 rounded-xl shadow-lg mb-8 max-w-4xl mx-auto">
+                <div class="glass-card p-8 rounded-xl shadow-lg mb-8 max-w-4xl mx-auto fade-in">
                     <form>
                         <div class="grid md:grid-cols-3 gap-6">
                             <div class="md:col-span-2">
-                                <label for="target" class="block mb-2 text-sm font-medium text-gray-300">Target Host/IP</label>
-                                <input type="text" id="target" value="scanme.nmap.org" class="w-full bg-gray-700 border-2 border-gray-600 text-white rounded-lg p-3 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition" required>
+                                <label for="target" class="block mb-2 text-lg font-medium text-cyan-300">Target Designation</label>
+                                <input type="text" id="target" value="scanme.nmap.org" class="form-input w-full text-white rounded-lg p-3 transition" required>
                             </div>
                             <div>
-                                <label for="options" class="block mb-2 text-sm font-medium text-gray-300">Nmap Options</label>
-                                <input type="text" id="options" value="-sV" class="w-full bg-gray-700 border-2 border-gray-600 text-white rounded-lg p-3 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition">
+                                <label for="options" class="block mb-2 text-lg font-medium text-cyan-300">Scan Profile</label>
+                                <select id="options" class="form-input select-arrow w-full text-white rounded-lg p-3 transition appearance-none">
+                                    <option value="-sV">Standard Service Scan {-sV}</option>
+                                    <option value="-T4 -A -v">Intense Scan {-T4 -A -v}</option>
+                                    <option value="-T4 -F">Quick Scan (Top 100) {-T4 -F}</option>
+                                    <option value="-sn">Ping Scan (Discovery) {-sn}</option>
+                                </select>
                             </div>
                         </div>
                         <div class="text-center mt-8">
-                            <button type="button" id="scan-button" class="scan-btn text-white font-bold py-3 px-8 rounded-lg transition duration-300 disabled:opacity-50 disabled:shadow-none">Start Scan</button>
+                            <button type="button" id="scan-button" class="scan-btn font-bold py-3 px-8 rounded-lg transition duration-300 disabled:opacity-50 disabled:shadow-none uppercase tracking-wider">Start Scan</button>
                         </div>
                     </form>
                 </div>
                 <div id="scan-results-container" class="max-w-5xl mx-auto">
-                    <div class="text-center text-gray-500 italic">Scan results will appear here.</div>
+                    <div class="text-center text-cyan-300/50 italic">Awaiting scan command...</div>
                 </div>
             </div>
 
@@ -92,163 +66,6 @@
         </main>
     </div>
 
-    <script>
-        // --- DOM Elements ---
-        const navScanner = document.getElementById('nav-scanner');
-        const navHistory = document.getElementById('nav-history');
-        const pageScanner = document.getElementById('page-scanner');
-        const pageHistory = document.getElementById('page-history');
-        const scanButton = document.getElementById('scan-button');
-        const scanResultsContainer = document.getElementById('scan-results-container');
-        const historyListContainer = document.getElementById('history-list-container');
-
-        // --- State Management ---
-        let lastScanData = null; // Holds data of the last scan to be saved to history
-
-        // --- Page Navigation Logic ---
-        navScanner.addEventListener('click', () => showPage('scanner'));
-        navHistory.addEventListener('click', () => {
-            showPage('history');
-            loadHistory();
-        });
-
-        function showPage(pageName) {
-            [pageScanner, pageHistory].forEach(p => p.classList.remove('page-active'));
-            [navScanner, navHistory].forEach(n => n.classList.remove('nav-active', 'text-gray-400', 'hover:text-emerald-400'));
-
-            if (pageName === 'scanner') {
-                pageScanner.classList.add('page-active');
-                navScanner.classList.add('nav-active');
-                navHistory.classList.add('text-gray-400', 'hover:text-emerald-400');
-            } else {
-                pageHistory.classList.add('page-active');
-                navHistory.classList.add('nav-active');
-                navScanner.classList.add('text-gray-400', 'hover:text-emerald-400');
-            }
-        }
-
-        // --- Scanner Logic ---
-        scanButton.addEventListener('click', async () => {
-            if (lastScanData) {
-                fetch('http://localhost:5000/history', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(lastScanData)
-                }).catch(error => console.error('Failed to save previous scan:', error));
-            }
-            
-            scanButton.disabled = true;
-            scanButton.textContent = 'Scanning...';
-            scanResultsContainer.innerHTML = `<div class="text-center py-10"><div class="loader rounded-full h-12 w-12 border-4 border-gray-600 mx-auto"></div><p class="mt-4 text-gray-400">Scan in progress...</p></div>`;
-
-            const target = document.getElementById('target').value;
-            const options = document.getElementById('options').value;
-
-            try {
-                const response = await fetch('http://localhost:5000/scan', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ target, options }),
-                });
-                const results = await response.json();
-                if (!response.ok) throw new Error(results.error || 'An unknown error occurred.');
-
-                scanResultsContainer.innerHTML = createResultsHTML(results);
-                lastScanData = { target, options, results };
-
-            } catch (error) {
-                scanResultsContainer.innerHTML = createErrorHTML(error.message);
-                lastScanData = null; 
-            } finally {
-                scanButton.disabled = false;
-                if (lastScanData) {
-                    scanButton.textContent = 'Store & Start New Scan';
-                } else {
-                    scanButton.textContent = 'Start Scan';
-                }
-            }
-        });
-
-        // --- History Logic ---
-        async function loadHistory() {
-            historyListContainer.innerHTML = `<div class="text-center py-10"><div class="loader rounded-full h-12 w-12 border-4 border-gray-600 mx-auto"></div></div>`;
-            try {
-                const response = await fetch('http://localhost:5000/history');
-                const historyData = await response.json();
-                if (!response.ok) throw new Error('Failed to load history.');
-                displayHistory(historyData);
-            } catch (error) {
-                historyListContainer.innerHTML = createErrorHTML(error.message);
-            }
-        }
-
-        function displayHistory(historyData) {
-            if (historyData.length === 0) {
-                historyListContainer.innerHTML = `<div class="text-center text-gray-500 py-10">No scan history found.</div>`;
-                return;
-            }
-            historyListContainer.innerHTML = historyData.map(entry => `
-                <div class="bg-gray-800/50 p-5 rounded-lg mb-4 transition hover:bg-gray-800">
-                    <div class="flex justify-between items-center cursor-pointer" onclick="toggleHistoryDetails('${entry.id}')">
-                        <div>
-                            <div class="font-bold text-lg text-white">${entry.target}</div>
-                            <div class="text-sm text-gray-400">
-                                ${new Date(entry.timestamp).toLocaleString()} &mdash; Options: <code class="bg-gray-900 px-2 py-1 rounded">${entry.options}</code>
-                            </div>
-                        </div>
-                        <span id="arrow-${entry.id}" class="transform transition-transform text-gray-400">&#9662;</span>
-                    </div>
-                    <div id="details-${entry.id}" class="hidden mt-4 border-t border-gray-700 pt-4">
-                        ${createResultsHTML(entry.results)}
-                    </div>
-                </div>
-            `).join('');
-        }
-
-        function toggleHistoryDetails(id) {
-            const details = document.getElementById(`details-${id}`);
-            const arrow = document.getElementById(`arrow-${id}`);
-            details.classList.toggle('hidden');
-            arrow.classList.toggle('rotate-180');
-        }
-
-        // --- Reusable HTML Generation ---
-        function createResultsHTML(results) {
-            if (!results || results.length === 0) return `<div class="text-center text-yellow-400 bg-yellow-900/50 py-4 rounded-lg">No hosts found or scan returned no data.</div>`;
-            return results.map(host => `
-                <div class="bg-gray-800 p-6 rounded-xl shadow-md">
-                    <div class="flex items-center justify-between mb-4 border-b border-gray-700 pb-3">
-                         <h3 class="text-2xl font-bold text-white">Host: <span class="text-emerald-400">${host.host}</span> <span class="text-gray-400 text-lg">(${host.hostname || 'N/A'})</span></h3>
-                         <p class="text-lg">State: <span class="font-semibold ${host.state === 'up' ? 'text-green-400' : 'text-red-400'}">${host.state.toUpperCase()}</span></p>
-                    </div>
-                    ${host.protocols.map(proto => `
-                        <div class="mt-4">
-                            <h4 class="text-xl font-semibold text-gray-300 mb-3">${proto.protocol.toUpperCase()} Ports</h4>
-                            <div class="overflow-x-auto">
-                                <table class="min-w-full text-left">
-                                    <thead class="bg-gray-900/50">
-                                        <tr>
-                                            <th class="p-3">Port</th><th class="p-3">State</th>
-                                            <th class="p-3">Service</th><th class="p-3">Version</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="divide-y divide-gray-700/50">${proto.ports.map(port => `
-                                        <tr class="hover:bg-gray-700/50">
-                                            <td class="p-3 font-semibold text-emerald-400">${port.port || ''}</td>
-                                            <td class="p-3">${port.state || ''}</td>
-                                            <td class="p-3">${port.name || ''}</td>
-                                            <td class="p-3 text-gray-400">${port.product || ''} ${port.version || ''}</td>
-                                        </tr>`).join('')}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>`).join('')}
-                </div>`).join('');
-        }
-
-        function createErrorHTML(message) {
-            return `<div class="bg-red-900/50 border border-red-700 text-red-300 p-4 rounded-lg"><h3 class="font-bold">Error</h3><p>${message}</p></div>`;
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
